--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title id="tabname">Taco Tapper</title>
-    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="57x57" href="faviz/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="faviz/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="faviz/apple-icon-72x72.png">
@@ -26,7 +26,7 @@
     }
     body {
       background-color: #2D6658;
-      font-family: 'Exo 2', sans-serif;
+      font-family: 'Exo', sans-serif;
       color: white;
     }
     #taco:active {
