--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .center {
       text-align: center;
     }
-    body {
+    body, html {
       background-color: #2D6658;
       font-family: 'Exo', sans-serif;
       color: white;
