--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
     body, html {
       background-color: #2D6658;
-      font-family: 'Exo', sans-serif;
+      font-family: Exo, sans-serif;
       color: white;
     }
     #taco:active {
@@ -59,6 +59,7 @@
       color: white;
       height: 120px;
       width: 300px;
+      font-family: Exo, sans-serif;
     }
     button.h {
       color: #8577FF;
