--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title id="tabname">Taco Tapper</title>
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="57x57" href="faviz/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="faviz/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="faviz/apple-icon-72x72.png">
@@ -59,7 +60,7 @@
       color: white;
       height: 120px;
       width: 300px;
-      font-family: Exo, sans-serif;
+      font-family: Quicksand, sans-serif;
     }
     button.h {
       color: #8577FF;
