--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
     <button class="center q" onclick="shop.buy(shop.lettucelasers, 1, lettucelasers);"><h1>Buy Lettuce Laser</h1><h5>$<div id="lettucelasers">100000000</div> - 1000000 tps</h5></button>
     <button class="center q" onclick="shop.buy(shop.meatmountains, 1, meatmountains);"><h1>Buy Meat Mountains</h1><h5>$<div id="meatmountains">500000000</div> - 5000000 tps</h5></button>
     <button class="center q" onclick="shop.buy(shop.ionfusers, 1, ionfusers);"><h1>Buy Ion Fuser</h1><h5>$<div id="ionfusers">1000000000</div> - 10000000 tps</h5></button>
-    <button class="center q" onclick="shop.buy(shop.greatgrandpas, 1, greatgrandpas);"><h1>Buy Ion Fuser</h1><h5>$<div id="ionfusers">5000000000</div> - 50000000 tps</h5></button>
+    <button class="center q" onclick="shop.buy(shop.greatgrandpas, 1, greatgrandpas);"><h1>Buy Great Grandpa</h1><h5>$<div id="ionfusers">5000000000</div> - 50000000 tps</h5></button>
     <br /><br />
     <div onclick="taco.click();" id="taco"><img src="taco.png" class="imgcenter"></img></div>
     <h4>Require $1000 Purchase:</h4>
     <button class="center h" onclick="boosts.buy(boosts.doubletappers, 1, doubletappers);"><h1>Buy Double Tapper</h1><h5>$10000 - +1 tpc - <div id="doubletappers">0</div></h5></button>
     <button class="center h" onclick="boosts.buy(boosts.duplicators, 1, duplicators);"><h1>Buy Duplicator</h1><h5>$1000000 - +100 tpc - <div id="duplicators">0</div></h5></button>
-    <button class="center h" onclick="boosts.buy(boosts.energizers, 1, energizers);"><h1>Buy Duplicator</h1><h5>$100000000 - +10000 tpc - <div id="energizers">0</div></h5></button>
+    <button class="center h" onclick="boosts.buy(boosts.energizers, 1, energizers);"><h1>Buy Energizer</h1><h5>$100000000 - +10000 tpc - <div id="energizers">0</div></h5></button>
     <h3 class="center">Tacos: </h3><h1 id="tacocounter" class="center">0</h1>
     <br />
     <h3 class="center">TPS: </h3><h1 id="tpscounter" class="center">0</h1>
