--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   </head>
     <body>
     <h1 id="title" class="center">Taco Tapper</h1>
+    <h4 class="center">By: Eli Frigo</h4>
     <button><h1 class="center" onclick="taco.reset();">Reset</h1></button>
     <hr style="color: gray;"/>
     <br /><br />
@@ -100,7 +101,7 @@
     <h3 class="center">TPS: </h3><h1 id="tpscounter" class="center">0</h1>
     <h3 class="center">TPT: </h3><h1 id="tpccounter" class="center">0</h1>
     <br />
-    <footer><h4>v0.6</h4></footer>
+    <footer><h4>v0.7</h4></footer>
     <script src="main.js"></script>
   </body>
 </html>
