--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       border-color: #99E26F;
     }
     button {
-      margin: 33px;
+      margin: 5px;
+      margin-left: 32px;
+      margin-right: 32px;
       border-style: solid;
       border-width: 2px;
       border-radius: 5px;
