--- a/index.html
+++ b/index.html
@@ -4,23 +4,9 @@
     <title id="tabname">Taco Tapper</title>
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="57x57" href="faviz/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="faviz/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="faviz/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="faviz/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="faviz/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="faviz/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="faviz/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="faviz/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="faviz/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="faviz/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="faviz/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="faviz/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="faviz/favicon-16x16.png">
-    <link rel="manifest" href="faviz/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="faviz/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
+    <meta name="msapplication-TileColor" content="#2D6658">
+    <meta name="theme-color" content="#2D6658">
     <style>
     .center {
       text-align: center;
@@ -48,8 +34,8 @@
       margin-right: auto;
     }
     #reset {
-      height: 52px;
-      width: 120px;
+      height: 104px;
+      width: 240px;
     }
     button.q {
       color: #99E26F;
