--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <button class="center h" onclick="boosts.buy(boosts.doubletappers, 1, doubletappers);"><h1>Buy Double Tapper</h1><h5>$10000 - +1 tpt - <div id="doubletappers">0</div></h5></button>
     <button class="center h" onclick="boosts.buy(boosts.duplicators, 1, duplicators);"><h1>Buy Duplicator</h1><h5>$1000000 - +100 tpt - <div id="duplicators">0</div></h5></button>
     <button class="center h" onclick="boosts.buy(boosts.energizers, 1, energizers);"><h1>Buy Energizer</h1><h5>$100000000 - +10000 tpt - <div id="energizers">0</div></h5></button>
+    <button class="center h" onclick="boosts.buy(boosts.bajablasts, 1, bajablasts);"><h1>Buy Baja Blast</h1><h5>$10000000000 - +1000000 tpt - <div id="bajablasts">0</div></h5></button>
     <br /><br />
     <div onclick="taco.click();" id="taco"><img src="taco.png" class="imgcenter"></img></div>
     <br />
