--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
       width: 240px;
     }
     #buttons {
-      height: 150px;
-      width: 100px;
+      height: 300px;
+      width: 100%;
       overflow: scroll;
+      border-style: solid;
+      border-color: #27564B;
     }
     button.q {
       color: #99E26F;
