--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       width: 100%;
       overflow: scroll;
       border-style: solid;
-      border-color: #27564B;
+      border-color: black;
+      border-radius: 5px;
     }
     button.q {
       color: #99E26F;
