Added the enter code buttOn

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <h1 id="title" class="center">Taco Tapper</h1>
     <h4 class="center">By: Eli Frigo</h4>
     <button id="reset"><h1 class="center" onclick="resetPrice();">Reset</h1></button>
+    <button id="reset"><h1 class="center" onclick="enterCode();">Enter Code</h1></button>
     <hr style="color: gray;"/>
     <br /><br />
     <div id="buttons">
