--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.png">
+    <meta http-equiv="Content-Language" content="en">
     <meta name="msapplication-TileColor" content="#2D6658">
     <meta name="theme-color" content="#2D6658">
     <style>
