--- a/index.html
+++ b/index.html
@@ -109,5 +109,6 @@
     <footer><h4>v0.8.2</h4></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script src="main.js"></script>
+    <h6>#Perin S.</h6>
   </body>
 </html>
