--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       text-align: center;
     }
     body, html {
-      background-color: #2D6658;
+      background-color: rgb(20, 25, 30);
       font-family: Exo, sans-serif;
       color: white;
     }
@@ -56,7 +56,7 @@
       border-style: solid;
       border-width: 2px;
       border-radius: 5px;
-      background-color: #27564B;
+      background-color: rgb(20,20,30);
       color: white;
       height: 130px;
       width: 300px;
